# ISRPO2_1

./: .gitignore  CMakeLists.txt  INSTALL_OPENCV.md  LAB2_REPORT.md  LABORATORY_WORK_SUMMARY.md  README.md  build.sh
apps/complex_app/: CMakeLists.txt  main.cpp
apps/face_detect/: CMakeLists.txt  main.cpp
cmake-3.24.1-windows-x86_64/share/cmake-3.24/Modules/: FindEXPAT.cmake  FindEnvModules.cmake  FindFLEX.cmake  FindFLTK.cmake  FindFLTK2.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindGCCXML.cmake  FindGDAL.cmake  FindGIF.cmake  FindGLEW.cmake  FindGLU.cmake  FindGLUT.cmake  FindGSL.cmake  FindGTK.cmake  FindGTK2.cmake  FindGTest.cmake  FindGettext.cmake  FindGit.cmake  FindGnuTLS.cmake  FindGnuplot.cmake  FindHDF5.cmake  FindHSPELL.cmake  FindHTMLHelp.cmake  FindHg.cmake  FindICU.cmake  FindIce.cmake  FindIconv.cmake  FindIcotool.cmake  FindImageMagick.cmake  FindIntl.cmake  FindJNI.cmake  FindJPEG.cmake  FindJasper.cmake  FindJava.cmake  FindKDE3.cmake  FindKDE4.cmake
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/_static/: documentation_options.js
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_instrumentation.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_pkg_config.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  (+90 more)
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/cpack_gen/: appimage.html  archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CLICOLOR.html  CLICOLOR_FORCE.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_AUTOGEN_INTERMEDIATE_DIR_STRATEGY.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_DIR.html  CMAKE_CONFIG_TYPE.html  CMAKE_CROSSCOMPILING_EMULATOR.html  CMAKE_EXPORT_BUILD_DATABASE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FASTBUILD_VERBOSE_GENERATOR.html  CMAKE_FRAMEWORK_PATH.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INCLUDE_PATH.html  CMAKE_INSTALL_MODE.html  CMAKE_INSTALL_PARALLEL_LEVEL.html  CMAKE_INSTALL_PREFIX.html  CMAKE_INTERMEDIATE_DIR_STRATEGY.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_LANG_IMPLICIT_LINK_LIBRARIES_EXCLUDE.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_LIBRARY_PATH.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  (+45 more)
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  FASTBuild.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 17 2022.html  Visual Studio 18 2026.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Visual Studio 8 2005.html  Visual Studio 9 2008.html  Watcom WMake.html  Xcode.html
cmake-4.2.0-rc1-windows-x86_64/doc/cmake/html/manual/: ccmake.1.html  cmake-buildsystem.7.html  cmake-commands.7.html  cmake-compile-features.7.html  cmake-configure-log.7.html  cmake-cxxmodules.7.html  cmake-developer.7.html  cmake-env-variables.7.html  cmake-file-api.7.html  cmake-generator-expressions.7.html  cmake-generators.7.html  (+16 more)
cmake-4.2.0-rc1-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-4.2.0-rc1-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-instrumentation.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
complex_app/: CMakeLists.txt  main.cpp
complex_lib/: CMakeLists.txt
demo_project/: CMakeLists.txt  README.md  main.cpp
demos/complex_app/: CMakeLists.txt  main.cpp
demos/face_detect/: CMakeLists.txt  main.cpp
face_detect/: CMakeLists.txt  face_detection.cpp
lib/complex_app/complex_app/: complex_app.cpp  complex_app.sln  complex_app.vcxproj  complex_app.vcxproj.filters
lib/complex_app2/: main.cpp
lib/complex_lib/: Complex.cpp  Complex.h
opencv_face_detection/: CMakeLists.txt  README.md  create_realistic_test.cpp  create_test_image.cpp  face_detection.cpp
sample_lib/: CMakeLists.txt  CMakeLists_demo.txt  Complex.cpp  Complex.h  ComplexLibraryConfig.cmake.in  README.md  demo.cpp  sample_lib.sln  sample_lib.vcxproj  sample_lib.vcxproj.filters
test/: CMakeLists.txt  test_complex.cpp
(+1942 files in other folders)
